# FEEL

./: .gitignore  README.md  app.py  batch.sh  pyproject.toml
FEEL/: .gitignore  ECO_test.py  README.md  cleanout.sh  execute.sh  generator.py  runner.py  runner_refactor.py  save_and_load.py  test.py  tester.sh  testing.py  train.py  train.sh  train_merged.py  train_nn.py  trainer.sh
FEEL/annotation/: GUI.py  parameters_database.csv  params_test.csv  params_trainval.csv  split_videos.py
FEEL/annotation/joe/: params_test.csv  params_trainval.csv
FEEL/annotation/opengrave/: params_trainval.csv
FEEL/config/: random_input.yaml
FEEL/dataset/: README.md  convert_mp4_to_jpeg.py  converter.sh  download_kinetics.py  joe_test.json  labels2emotion.py  preprocess.py  preprocessor.py  video_dataset.py
FEEL/deprecated/: train_merged.py
FEEL/model/: Amygdala.py  ECO.py  Elaborator.py  MViT.py  README.md  __init__.py  amygdala.py  elaborator.py  elaborator_refactor.py  prefrontal_cortex.py  simple_dnn.py
FEEL/model/ECO/: 3DCNN.py  Inception-v2.py
FEEL/model/Hippocampus/: Database.py  EventDataset.py  Hippocampus.py  PriorityQueue.py
FEEL/model/MViT/: MViT_takahashi.py
FEEL/model/SubcorticalPathway/: SubcorticalPathway.py
FEEL/model/controller/: __init__.py  eval_controller.py
FEEL/test/: __init__.py  visualize.py
FEEL/train/: __init__.py  config.py  epoch.py  train.py
FEEL/utils/: __init__.py  eval_convert.py  load_pretrained.py  time.py  zero_padding.py
FastSpeech2/: .gitignore  execute.sh
static/: style.css
templates/: process.html  upload.html
(+15 files in other folders)
